--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,9 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule:
+    # Ejecuta diariamente a las 09:00 UTC
+    - cron: '0 9 * * *'
 jobs:
   test:
     timeout-minutes: 60
