--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,11 @@ jobs:
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
+        name: test-results-json
+        path: tests/test-results/extracted-data/all-results.json
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
