--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,3 +27,19 @@ jobs:
           USAL_USERNAME: ${{ secrets.MI_SUPER_USUARIO }}
           USAL_PASSWORD: ${{ secrets.MI_SUPER_PASSWORD }}
         run: npx playwright test
+
+      - name: Upload test results JSON
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results/extracted-data/all-results.json
+          retention-days: 30
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
